# audio_converter_android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/tech/smallwonder/audioconverter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioConverter.h  CMakeLists.txt  native-lib.cpp
app/src/main/java/tech/smallwonder/audioconverter/: AudioConverter.java
app/src/test/java/tech/smallwonder/audioconverter/: ExampleUnitTest.java
app/testaudioconverter/: build.gradle
app/testaudioconverter/src/androidTest/java/tech/smallwonder/testaudioconverter/: ExampleInstrumentedTest.java
app/testaudioconverter/src/main/: AndroidManifest.xml
app/testaudioconverter/src/main/java/tech/smallwonder/testaudioconverter/: MainActivity.java
app/testaudioconverter/src/main/res/layout/: activity_main.xml
app/testaudioconverter/src/main/res/values/: formats.xml  strings.xml
app/testaudioconverter/src/test/java/tech/smallwonder/testaudioconverter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
